DSS-5443 : Synoptical>> Alignment needs to be corrected (#3380)

--- a/web/cpdss-portal/apps/cpdss/src/app/business/synoptical/synoptical-table/synoptical-table.component.scss
+++ b/web/cpdss-portal/apps/cpdss/src/app/business/synoptical/synoptical-table/synoptical-table.component.scss
@@ -15,3 +15,7 @@
 .pl-percent{
   padding-left: 14% !important;
 }
+
+.port-center {
+  padding-right: 4% !important;
+}
